--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
 pillow = "^11.0.0"
 django-debug-toolbar = "^4.4.6"
+gunicorn = "^23.0.0"
 
 
 [build-system]
