Refactoring, added app serials

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,11 +5,11 @@ upstream backend {
 server {
     listen 80;
 
-    location / {
+    location = / {
         return 301 /movies;
     }
 
-    location /movies {
+    location / {
         include proxy_params;
         proxy_pass http://backend;
     }
