--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ psycopg2 = "^2.9.10"
 pillow = "^11.0.0"
 django-debug-toolbar = "^4.4.6"
 gunicorn = "^23.0.0"
+django-rest-framework = "^0.1.0"
+mypy = "^1.14.0"
+django-stubs = "^5.1.1"
+djangorestframework-stubs = "^3.15.2"
+django-filter = "^24.3"
 
 
 [build-system]
