--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ mypy = "^1.14.0"
 django-stubs = "^5.1.1"
 djangorestframework-stubs = "^3.15.2"
 django-filter = "^24.3"
+redis = "^5.2.1"
+hiredis = "^3.1.0"
 
 
 [build-system]
