--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   postgres_data:
   static_files:
   media_files:
+  backend:
 
 services:
   database:
@@ -28,18 +29,30 @@ services:
     volumes:
       - static_files:/app/staticfiles
       - media_files:/app/media
+      - backend:/app
     restart: always
     expose:
       - 8000
     depends_on:
       - database
       - redis
+      - celery
     command: sh -c "poetry run python manage.py makemigrations &&
                     poetry run python manage.py migrate &&
                     make loaddata &&
                     poetry run python manage.py collectstatic --no-input &&
                     poetry run gunicorn KinoMir.wsgi:application --bind 0.0.0.0:8000"
 
+  celery:
+    container_name: KinoMir-celery
+    build:
+      context: .
+    restart: always
+    depends_on:
+      - redis
+    volumes:
+      - backend:/app
+    command: poetry run celery -A KinoMir worker -l info
 
   nginx:
     container_name: KinoMir-nginx
