--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ djangorestframework-stubs = "^3.15.2"
 django-filter = "^24.3"
 redis = "^5.2.1"
 hiredis = "^3.1.0"
+drf-yasg = "^1.21.8"
+celery = "^5.4.0"
 
 
 [build-system]
