--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ hiredis = "^3.1.0"
 drf-yasg = "^1.21.8"
 celery = "^5.4.0"
 flake8 = "^7.1.1"
+isort = "^5.13.2"
+black = "^24.10.0"
 
 
 [build-system]
