--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -26,6 +27,7 @@ flake8 = "^7.1.1"
 isort = "^5.13.2"
 black = "^24.10.0"
 pre-commit = "^4.0.1"
+django-csp = "^3.8"
 
 
 [build-system]
