--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ volumes:
   postgres_data:
   static_files:
   media_files:
-  backend:
 
 services:
   database:
@@ -29,7 +28,7 @@ services:
     volumes:
       - static_files:/app/staticfiles
       - media_files:/app/media
-      - backend:/app
+      - ./:/app
     restart: always
     expose:
       - 8000
@@ -37,11 +36,10 @@ services:
       - database
       - redis
       - celery
-    command: sh -c "poetry run python manage.py makemigrations &&
-                    poetry run python manage.py migrate &&
+    command: sh -c "make migrate &&
                     make loaddata &&
-                    poetry run python manage.py collectstatic --no-input &&
-                    poetry run gunicorn KinoMir.wsgi:application --bind 0.0.0.0:8000"
+                    make collectstatic &&
+                    make run-prod"
 
   celery:
     container_name: KinoMir-celery
@@ -51,7 +49,7 @@ services:
     depends_on:
       - redis
     volumes:
-      - backend:/app
+      - ./:/app
     command: poetry run celery -A KinoMir worker -l info
 
   nginx:
@@ -60,9 +58,20 @@ services:
       context: ./nginx
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - backend
     volumes:
       - static_files:/app/staticfiles
       - media_files:/app/media
+      - ./nginx/certbot:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
     restart: always
+
+  certbot:
+    container_name: KinoMir-certbot
+    image: certbot/certbot
+    volumes:
+      - ./nginx/certbot:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
