--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,21 +5,44 @@ upstream backend {
 server {
     listen 80;
     server_tokens off;
+    server_name DOMAIN www.DOMAIN;
 
-    location = / {
-        return 301 /movies;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        allow all;
     }
 
-    location / {
-        include proxy_params;
-        proxy_pass http://backend;
-    }
-
-    location /static/ {
-        alias /app/staticfiles/;
-    }
-
-    location /media/ {
-        alias /app/media/;
-    }
+#    location / {
+#        return 301 https://$host$request_uri;
+#    }
 }
+
+#server {
+#    listen 443 ssl;
+#    server_tokens off;
+#    server_name DOMAIN www.DOMAIN;
+#
+#    ssl_certificate /etc/letsencrypt/live/DOMAIN/fullchain.pem;
+#    ssl_certificate_key /etc/letsencrypt/live/DOMAIN/privkey.pem;
+#
+#    location = / {
+#        return 301 /movies;
+#    }
+#
+#    location / {
+#        include proxy_params;
+#        proxy_pass http://backend;
+#    }
+#
+#    location /static/ {
+#        expires 30d;
+#        add_header Cache-Control "public";
+#        alias /app/staticfiles/;
+#    }
+#
+#    location /media/ {
+#        expires 30d;
+#        add_header Cache-Control "public";
+#        alias /app/media/;
+#    }
+#}
